5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1646_2730.log
== TEST (2019-04-16 15:13:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada X: "))
y = float(input("Coordenada Y: "))

if(y > 0):
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:14:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada X: "))
y = float(input("Coordenada Y: "))

if(Y > 0):
	print("Superiores")
else:
	print("Inferiores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(Y > 0):
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:14:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada X: "))
y = float(input("Coordenada Y: "))

if(y > 0):
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:14:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada X: "))
y = float(input("Coordenada Y: "))

if(y > 0):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.141391
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
